Fixed responsiveness on Safari

--- a/src/components/Uploader/style.css
+++ b/src/components/Uploader/style.css
@@ -15,7 +15,7 @@
 .instructions {
   @media (--small-viewport) {
     display: flex;
-    flex: 1 1 auto;
+    flex: 1 1 0;
     flex-direction: column;
     justify-content: space-around;
   }
@@ -151,6 +151,7 @@
   flex-direction: column;
   margin: 0 16*@unit;
   flex-grow: 1;
+  height: 16*@unit;
 }
 
 .uploadArea {
@@ -160,6 +161,12 @@
   position: relative;
   padding: 24*@unit 24*@unit 8*@unit;
   justify-content: space-around;
+  /*
+    We need to define a height for the uploadArea
+    because safari does not supporting height:100% inside a flex child like
+    .identityIcon and .faceIcon
+  */
+  height: 16*@unit;
 
   @media (--small-viewport) {
     background-color: @color-transparent;
